# MicroFramework

./: .gitignore  .gitmodules  CMakeLists.txt  MicroFrameworkApi.doxyfile  MicroFrameworkFull.doxyfile
Core/: CMakeLists.txt  Config.h  System.h
Core/System/: Buffer.cpp  Buffer.h  Collections.h  Console.cpp  Console.h  CopyableRef.h  Data.h  Enum.h  Events.h  Exception.h  Guid.cpp  Guid.h  HashCodeHandler.cpp  HashCodeHandler.h  NameValue.h  Object.h  ObjectDelegate.h  ObjectRef.cpp  ObjectRef.h  ObjectValue.h  Random.cpp  Random.h  SimpleObject.h  String.cpp  String.h  Threading.h  Type.cpp  Type.h
Core/System/Collections/: BindHelper.h  NameValueCollection.h  StringCollection.h
Core/System/Collections/Generic/: Dictionary.cpp  Dictionary.h  List.cpp  List.h  ListDelegate.h  PriorityQueue.cpp  PriorityQueue.h  Queue.h  Set.cpp  Set.h  Stack.h
Core/System/Data/: StructuredData.h
Core/System/IO/: Directory.cpp  Directory.h  DirectoryInfo.cpp  DirectoryInfo.h  Exception.h  File.cpp  File.h  FileInfo.cpp  FileInfo.h  FileMode.cpp  FileMode.h  FileStream.cpp  FileStream.h  MemoryStream.cpp  MemoryStream.h  Stream.cpp  Stream.h
Core/System/Text/: Match.cpp  Match.h  Regex.cpp  Regex.h
Core/System/Threading/: Locker.cpp  Locker.h  Mutex.cpp  Mutex.h  ResetEvent.cpp  ResetEvent.h  Runnable.h  Runner.cpp  Runner.h  SyncRunner.h  Synchro.h  Thread.cpp  Thread.h  ThreadCollection.h  Workers.h
Core/System/Xml/: XmlDocument.cpp  XmlDocument.h
Test/: CMakeLists.txt
Test/Core/: MyWorker.cpp  MyWorker.h  main.cpp
